Support native midPoint associations
Main goal
---------

To support native midPoint associations. It required massive
changes in handling native (formerly raw) resource schema support
in midPoint, cascading down here to prism.

Main change
-----------

Decoupled schema parsing and serialization from prism definitions
(derived from Definition interface). The parsing and serialization
now use more generic/focused interfaces, like SchemaBuilder,
DefinitionBuilder, TypeDefinitionLikeBuilder, and so on (for parsing),
and SerializableSchema, SerializableDefinition, etc (for serialization);
because we needed to parse and serialize native resource definitions,
which are no longer prism ones.

EXPERIMENTAL. To be seen if it was a good idea at all. But it helped us
to move forward with the work on shadow associations.

Specific changes:

A. Schema parsing and serialization
-----------------------------------

1. Schema XSD parsing and serialization was largely reworked. Besides
aforementioned decoupling from prism definitions, they now use
DefinitionFeature objects to be more modular and understandable.

2. Existing Annotation and AnnotationProcessor classes are now
implemented using DefinitionFeature and DefinitionFeatureParser classes.
Behavioral change: annotations are no longer stored into the dynamic
"annotations" map of the definition. To be reviewed/resolved later.

3. The access to schema parsing/serialization from upper layers was
simplified. Instead of SchemaDefinitionFactory and its extension
we use a declarative list of DefinitionFeature instances to parse or
serialize for given complex type or item.

4. Fixed the issue with putting unrelated definitions into a schema.
(Occurred when parsing a schema that referenced types from other
schemas. We now parse a set of related schemas at the same time.)

5. Naming changes: DomToSchema processor renamed to SchemaDomParser.
DomToSchemaPostProcessor renamed to SchemaXsomParser.
SchemaToDomProcessor renamed to SchemaDomSer